module/postponed/type_constructor/tests/inc/many/many_with_two_args_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( many Bad : < T1, T2 > );
}
